Fix z-index for background image

--- a/src/app.css
+++ b/src/app.css
@@ -44,7 +44,7 @@ body:before {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 0;
     background-image: var(--bg-img);
     background-size: cover;
     background-attachment: fixed;
